Restore bottom padding to prevent cut off of tab text ("g", "j", etc.)

--- a/webextensions/sidebar/styles/sidebar/sidebar.css
+++ b/webextensions/sidebar/styles/sidebar/sidebar.css
@@ -152,7 +152,7 @@
   text-shadow: none;
   margin-bottom: 1px;
   margin-left: 0.25em;
-  padding: 0;
+  padding: 0 0 0.25em 0;
 }
 
 .tab.active .label {
