--- a/webextensions/sidebar/styles/square/plain.css
+++ b/webextensions/sidebar/styles/square/plain.css
@@ -6,5 +6,6 @@
 
 @import url("base.css");
 @import url("border.css");
+@import url("active-tab-marker.css");
 @import url("plain-color.css");
 @import url("shadow.css");
