--- a/webextensions/sidebar/styles/throbber.css
+++ b/webextensions/sidebar/styles/throbber.css
@@ -6,7 +6,7 @@
 */
 
 :root {
-  --throbber-color: Highlight;
+  --throbber-color: var(--browser-loading-indicator-color, Highlight);
   --throbber-shadow-color: transparent;
   --throbber-size: var(--svg-small-icon-size);
   --tab-burster-size: 5px;
