Apply BG color for hover and active tabs

--- a/webextensions/sidebar/styles/square/vertigo-color.css
+++ b/webextensions/sidebar/styles/square/vertigo-color.css
@@ -84,6 +84,11 @@
   color: var(--tab-text);
 }
 
+.tab.active,
+.tab:hover {
+  background: var(--tab-surface);
+}
+
 .tab * {
   color: var(--tab-text);
 }
