Apply background image for "Plain" theme

--- a/webextensions/sidebar/styles/square/plain-color-dark.css
+++ b/webextensions/sidebar/styles/square/plain-color-dark.css
@@ -27,3 +27,8 @@
 :root[color-scheme="system-color"] #background::after {
   content: none;
 }
+
+:root,
+#background {
+  background-image: none;
+}
