--- a/webextensions/sidebar/styles/square/vertigo-color.css
+++ b/webextensions/sidebar/styles/square/vertigo-color.css
@@ -56,7 +56,7 @@
   --tab-highlighted-glow: #3890f3; /* = rgb(56, 144, 243) */
   --tab-highlighted-base: var(--tab-surface);
 
-  --throbber-color: var(--browser-loading-indicator-color, --browser-bg-lightest, --tab-highlighted-glow);
+  --throbber-color: var(--browser-loading-indicator-color, var(--browser-bg-lightest, var(--tab-highlighted-glow)));
 }
 
 :root,
@@ -100,7 +100,7 @@
 
 .tab.active {
   --tab-surface: var(--tab-surface-active);
-  --throbber-color: var(--browser-loading-indicator-color, --tab-highlighted-glow);
+  --throbber-color: var(--browser-loading-indicator-color, var(--tab-highlighted-glow));
   --tab-text: var(--tab-active-text);
   --tab-text-inverted: var(--tab-active-text-inverted);
 }
