Hide "Duplicate Tab" context menu item when there are multiselected tabs.
This respects https://bugzilla.mozilla.org/show_bug.cgi?id=1481473

--- a/webextensions/sidebar/styles/tab-context-menu.css
+++ b/webextensions/sidebar/styles/tab-context-menu.css
@@ -17,6 +17,7 @@
 #tabContextMenu[data-tab-states~="pinned"] #context_pinTab,
 #tabContextMenu:not([data-tab-states~="pinned"]) #context_unpinTab,
 #tabContextMenu[data-tab-states~="pinned"] #context_bookmarkAllTabs,
+#tabContextMenu[data-tab-states~="multiselected"] #context_duplicateTab,
 #tabContextMenu:not([data-tab-id]) .require-context-tab,
 #tabContextMenu:not([data-tab-id]) .extra,
 #tabContextMenu:not(.has-multiple-tabs) .require-multiple-tabs,
