Hide extra menu items for context menu on the blank area

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -587,6 +587,13 @@ ul {
 }
 
 
+/* fake context menu */
+
+#tabContextMenu:not([data-tab-id]) li.extra {
+  display: none !important;
+}
+
+
 /* blocking UI */
 
 #blocking-screen {
