--- a/webextensions/sidebar/styles/drag-and-drop.css
+++ b/webextensions/sidebar/styles/drag-and-drop.css
@@ -143,7 +143,7 @@
   border-left: none;
 }
 
-#tab-drag-handle:not(.has-child) .shouldIgnoreDescendants {
+#tab-drag-handle:not(.has-child) > :not(.shouldIgnoreDescendants) {
   display: none;
 }
 
