--- a/webextensions/sidebar/styles/drag-and-drop.css
+++ b/webextensions/sidebar/styles/drag-and-drop.css
@@ -127,7 +127,7 @@
 }
 
 #tab-drag-handle > span {
-  background: var(--tab-surface);
+  background: var(--tab-surface, var(--bg-color));
   border-left: 1px solid var(--tab-border);
   display: table-cell;
   height: var(--handle-size);
