--- a/webextensions/sidebar/styles/drag-and-drop.css
+++ b/webextensions/sidebar/styles/drag-and-drop.css
@@ -173,7 +173,11 @@
   mask: url("/sidebar/styles/icons/bookmark-tab.svg") no-repeat center / 100%;
 }
 
-#tab-drag-handle:not(.has-child) > :not(.shouldIgnoreDescendants) {
+#tab-drag-handle > span#tab-drag-handle-close::before {
+  mask: url("/sidebar/styles/icons/close-16.svg") no-repeat center / 100%;
+}
+
+#tab-drag-handle:not(.has-child) > :not(.shouldIgnoreDescendants):not(#tab-drag-handle-close) {
   display: none;
 }
 
