Revert "Add closebox to tab drag handles"
This reverts commit 052a0d9b0cc0ea6f9d7ab6a0959dd9feb7ad60d1.

--- a/webextensions/sidebar/styles/drag-and-drop.css
+++ b/webextensions/sidebar/styles/drag-and-drop.css
@@ -173,11 +173,7 @@
   mask: url("/sidebar/styles/icons/bookmark-tab.svg") no-repeat center / 100%;
 }
 
-#tab-drag-handle > span#tab-drag-handle-close::before {
-  mask: url("/sidebar/styles/icons/close-16.svg") no-repeat center / 100%;
-}
-
-#tab-drag-handle:not(.has-child) > :not(.shouldIgnoreDescendants):not(#tab-drag-handle-close) {
+#tab-drag-handle:not(.has-child) > :not(.shouldIgnoreDescendants) {
   display: none;
 }
 
