Always apply solid BG color to the tab bar #2050
It is required to prevent unexpected exposing of dummy elements when custom theme color is applied.

--- a/webextensions/sidebar/styles/square/mixed.css
+++ b/webextensions/sidebar/styles/square/mixed.css
@@ -35,7 +35,7 @@
 
 :root,
 #background {
-  background: var(--tabbar-bg);
+  background-color: var(--browser-background, var(--tabbar-bg));
   background-image: var(--browser-bg-url, none);
 }
 
