--- a/webextensions/sidebar/styles/square/plain-color.css
+++ b/webextensions/sidebar/styles/square/plain-color.css
@@ -27,7 +27,7 @@
 
 :root,
 #background {
-  background: var(--tabbar-bg);
+  background-color: var(--browser-background, var(--tabbar-bg));
   background-image: var(--browser-bg-url, none);
 }
 
