--- a/webextensions/sidebar/styles/drag-and-drop.css
+++ b/webextensions/sidebar/styles/drag-and-drop.css
@@ -194,3 +194,48 @@
 #tab-drag-handle > span.active {
   border: calc(var(--favicon-size) / 8) solid var(--tab-text);
 }
+
+/* notification message */
+
+#tab-drag-notification {
+  background: var(--tab-surface, var(--bg-color));
+  bottom: 0;
+  color: var(--tab-text);
+  font-size: var(--svg-small-icon-size);
+  height: calc(var(--svg-small-icon-size) * 1.5);
+  left: 0;
+  line-height: 1;
+  opacity: 0;
+  overflow: hidden;
+  padding: calc(var(--svg-small-icon-size) * 0.25) 0;
+  pointer-events: none;
+  position: fixed;
+  transition: opacity var(--collapse-animation);
+  right: 0;
+  z-index: 2000;
+}
+
+#tab-drag-notification.shown {
+  opacity: 0.85;
+}
+#tab-drag-notification.shown:hover {
+  opacity: 1;
+}
+
+#tab-drag-notification::before {
+  content: "";
+  display: inline-block;
+  white-space: nowrap;
+}
+
+#tab-drag-notification.shown > span,
+#tab-drag-notification.hiding > span {
+  position: absolute;
+  white-space: nowrap;
+  animation: marquee linear 20s infinite;
+}
+
+@keyframes marquee {
+    0% { left: 100%; transform: translate(0); }
+  100% { left: 0;    transform: translate(-100%); }
+}
