Unprefix -moz-linear-gradient()
As of https://bugzilla.mozilla.org/show_bug.cgi?id=1337655, Nightly
doesn’t support the obsolete -moz-linear-gradient() syntax; and the plan
is to drop it on stable eventually too.

This involves the inversion in direction specification between the old
and current syntaxes: “left” becomes “to right”, &c. The default
side-or-corner is “to bottom”, but I decided to leave those ones in
rather than dropping it. Clarity, and all that: not everyone knows the
default direction of a gradient.

--- a/skin/classic/treestyletab/square/tab-surface.css
+++ b/skin/classic/treestyletab/square/tab-surface.css
@@ -13,8 +13,8 @@
   :-moz-any(.tab-background:not([pinned]),
             .tab-background[pinned]) {
 	background-color: var(--tst-tab-surface) !important;
-	background-image: -moz-linear-gradient(
-	                    top, 
+	background-image: linear-gradient(
+	                    to bottom,
 	                    rgba(0, 0, 0, 0.02) 0,
 	                    rgba(0, 0, 0, 0) 50%
 	                  ) !important;
@@ -25,8 +25,8 @@
   .tabbrowser-tab[visuallyselected="true"]
   .tab-background[selected="true"] {
 	background-color: var(--tst-tab-surface-selected) !important;
-	background-image: -moz-linear-gradient(
-	                    top,
+	background-image: linear-gradient(
+	                    to bottom,
 	                    rgba(4, 83, 227, 0.04) 0,
 	                    rgba(4, 83, 227, 0) 50%
 	                  ) !important;
@@ -40,8 +40,8 @@
   :-moz-any(.tab-background:not([pinned]),
             .tab-background[pinned]:not([titlechanged])) {
 	background-color: var(--tst-tab-surface-hover) !important;
-	background-image: -moz-linear-gradient(
-	                    top,
+	background-image: linear-gradient(
+	                    to bottom,
 	                    rgba(213, 224, 245, 1) 0,
 	                    rgba(213, 224, 245, 0.4) 50%
 	                  ) !important;
@@ -51,8 +51,8 @@
   .tabbrowser-tab:hover
   .tab-background[selected="true"] {
 	background-color: var(--tst-tab-surface-selected-hover) !important;
-	background-image: -moz-linear-gradient(
-	                    top,
+	background-image: linear-gradient(
+	                    to bottom,
 	                    rgba(199, 219, 252, 1) 0,
 	                    rgba(199, 219, 252, 0.4) 50%
 	                  ) !important;
