--- a/skin/classic/treestyletab/sidebar/sidebar.css
+++ b/skin/classic/treestyletab/sidebar/sidebar.css
@@ -165,14 +165,14 @@ tabbrowser[treestyletab-mode="vertical"]
 }
 .tabbrowser-tabs[treestyletab-mode="vertical"]
   .tabbrowser-tab[visuallyselected="true"] {
-	background: -moz-linear-gradient(top, #A0B0CF, #7386AB) repeat-x !important;
+	background: linear-gradient(to bottom, #A0B0CF, #7386AB) repeat-x !important;
 }
 
 #main-window:-moz-window-inactive
   .tabbrowser-tabs[treestyletab-mode="vertical"]
   .tabbrowser-tab[visuallyselected="true"] {
 	border-top: 1px solid #979797 !important;
-	background: -moz-linear-gradient(top, #B4B4B4, #8A8A8A) repeat-x !important;  
+	background: linear-gradient(to bottom, #B4B4B4, #8A8A8A) repeat-x !important;
 }
 
 /* Keep the close button at a safe distance from the tab label. */
